--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,25 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            
+             <!--  nav here -->
+           <% if not logged_in? %>
+            <li>
+              <%= link_to 'Sign Up', '/users/new' %>
+            </li>
+            <li>
+              <%= link_to 'Sign In', signin_path %>
+            </li>
+           <% else %>
+            <li>
+              <%= link_to "Hello, #{current_user.name}!", user_path(current_user) %>
+            </li>
+            <li>
+              <%= link_to "Attractions", attractions_path %>
+            </li>
+            <li>
+              <%= link_to "Log Out", logout_path %>
+            </li>
+           <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
